Fix prev next icons, update copy & spacing

--- a/assets/css/sensei-course-theme/prev-next-lesson.scss
+++ b/assets/css/sensei-course-theme/prev-next-lesson.scss
@@ -40,19 +40,10 @@
 			}
 		}
 
-		&__prev {
+		&__prev, &__next {
 			svg {
-				margin-right: 14px;
-				width: 5px;
-				height: 11px;
-			}
-		}
-
-		&__next {
-			svg {
-				margin-left: 14px;
-				width: 5px;
-				height: 11px;
+				width: 24px;
+				height: 24px;
 			}
 		}
 	}
